# math

./: .gitignore  Cargo.toml  README.md  TODO.txt  main.rs
algebra/: Cargo.toml
algebra/src/: algebra.rs  lib.rs  solve.rs
input/: Cargo.toml
input/src/: error.rs  lib.rs  token.rs
interface/: Cargo.toml
interface/src/: app.rs  main.rs
src/: algebra.rs  app.rs  grammar.pest  main.rs
