[package]
name = "math"
version = "0.1.0"
authors = ["sander.bockstaele <sander.bockstaele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.9.0" }
epi = { version = "0.9.0" }
eframe = "0.9.0"
emath = "0.9.0"
pom = "3.2.0"