[package]
name = "math"
version = "0.1.0"
authors = ["sander.bockstaele <sander.bockstaele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "interface/src/main.rs"
name = "math"

[[test]]
name = "integration"
path = "tests/tests.rs"

[workspace]
members = [
	"algebra",
	"interface",
	"input",
]

[dependencies]
egui = { version = "0.9.0" }
epi = { version = "0.9.0" }
eframe = "0.9.0"
emath = "0.9.0"
prev-iter = "0.1.2"
unicode-segmentation = "1.7.1"
array2d = "0.2.1"
thiserror = "1.0.24"
