[package]
name = "math"
version = "0.1.0"
authors = ["sander.bockstaele <sander.bockstaele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "main.rs"
name = "math"

[profile.dev]
opt-level = 0
debug = true

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
egui = { version = "0.9.0" }
epi = { version = "0.9.0" }
eframe = "0.9.0"
emath = "0.9.0"
prev-iter = "0.1.2"
unicode-segmentation = "1.7.1"
array2d = "0.2.1"
thiserror = "1.0.24"
algebra = { path = "algebra" }
